--- a/doc/anhang.tex
+++ b/doc/anhang.tex
@@ -1,17 +1,55 @@
 \section{Anhang}
 \addtocontents{toc}{\protect\setcounter{tocdepth}{-1}}
 
-\subsection{Anwendungsfälle}
-
-\vfill
-\begin{figure}[H]
-	\centering
-	\includegraphics[width=\linewidth]{../graphic/diagrams/UC_Anwendungsfall/Anwendungsfall}
-	\caption{Use-Case-Diagramm}
-	\label{fig:anwendungsfall}
-\end{figure}
-\vfill
-
-\newpage
-
+\subsection{XML}
+\label{xml}
+\input{CODE/TestXML}
 \input{ressourcen}
+
+\subsection{Anwendungsfälle}
+\label{usecase}
+
+\begin{figure}[H]
+\includegraphics[width=\linewidth]{../graphic/diagrams/UC_Anwendungsfall/Anwendungsfall}
+\end{figure}
+
+\subsection{Zeichnen des Icons im CheckToggleButton}
+\label{CheckToggleButton}
+\input{CODE/CheckToggleButton}
+
+\subsection{CheckItemButton}
+\label{CheckItemButton}
+\input{CODE/CheckItemButton}
+
+\subsection{Setzen der CheckItems im CheckItemContainer}
+\label{CheckItemContainer}
+\input{CODE/CheckItemContainer}
+
+\subsection{ShortcutStructureTable}
+\label{ShortcutStructureTable}
+\input{CODE/ShortcutStructureTable}
+
+\subsection{ShortcutPathComponent}
+\label{ShortcutPathComponent}
+\input{CODE/ShortcutPathComponent}
+
+\subsection{ShortcutEditorUI}
+\label{ShortcutEditorUI}
+\input{CODE/ShortcutEditorUI}
+
+\subsection{ShortcutEditorPresenter}
+\label{ShortcutEditorPresenter}
+\input{CODE/ShortcutEditorPresenter}
+
+\subsection{ShortcutStructurePresenter}
+\label{ShortcutStructurePresenter}
+\input{CODE/ShortcutStructurePresenterTeil1}
+\input{CODE/ShortcutStructurePresenterTeil2}
+
+\subsection{ShortcutStructureModel}
+\label{ShortcutStructureModel}
+\input{CODE/ShortcutStructureModel}
+
+\subsection{ShortcutEditor Test}
+\label{Test_ShortcutEditor}
+\input{CODE/Test_ShortcutEditor}
