--- a/doc/projektplanung.tex
+++ b/doc/projektplanung.tex
@@ -12,6 +12,7 @@ Um das Projekt realisieren zu können, musste sich für einen geeigneten Entwick
 \end{figure}
 
 \subsection{Projektphasen}
+\label{Projektphasen}
 
 Zur Realisierung des Abschlussprojekts standen insgesamt 70 Stunden zur Verfügung. Diese Zeit wurde vor Projektbeginn auf verschiedene Phasen verteilt, die während der Durchführung durchlaufen werden. Diese Zeitplanung der Hauptphasen lässt sich aus \autoref{fig:grobeZeit} entnehmen.
 
@@ -38,7 +39,7 @@ Zur Realisierung des Abschlussprojekts standen insgesamt 70 Stunden zur Verfügu
 
 \subsection{Ressourcenplanung}
 
-Im Zuge der Ressourcenplanung wurde eine Übersicht (siehe Anhang \autoref{ressources}) erstellt. Diese enthält sämtliche Ressourcen, welche innerhalb der Durchführung des Projekts eingesetzt wurden. Dabei handelt es sich sowohl um Hard- und Softwareressourcen als auch um Personal. Zur Minimierung der Projektkosten wurde bevorzugt kostenfreie Software verwendet. War dies nicht möglich, so wurde Software eingesetzt, für welche die ADITO Software GmbH bereits Lizenzen besaß.
+Im Zuge der Ressourcenplanung wurde eine Übersicht (siehe Anhang \ref{ressources}) erstellt. Diese enthält sämtliche Ressourcen, welche innerhalb der Durchführung des Projekts eingesetzt wurden. Dabei handelt es sich sowohl um Hard- und Softwareressourcen als auch um Personal. Zur Minimierung der Projektkosten wurde bevorzugt kostenfreie Software verwendet. War dies nicht möglich, so wurde Software eingesetzt, für welche die ADITO Software GmbH bereits Lizenzen besaß.
 
 
 
