--- a/doc/ressourcen.tex
+++ b/doc/ressourcen.tex
@@ -26,3 +26,5 @@
 \item Mitarbeiter der UX-Abteilung – Erstellung von Designentwürfen
 \item Entwickler – Umsetzung des Projektes
 \end{itemize}
+
+\vfill
