--- a/doc/fazit.tex
+++ b/doc/fazit.tex
@@ -1,6 +1,6 @@
 \section{Fazit}
 
-Rückwirkend betrachtet, kann festgehalten werden, dass alle Anforderungen an den Editor gemäß der Projektplanung umgesetzt wurden. Der im Abschnitt (XXX) erwähnte Projektplan konnte eingehalten werden. Die Tabelle in \autoref{fig:sollist} zeigt die tatsächlich benötigten Zeit gegenüber der geplanten. Dabei ist zu erkennen, dass es in den einzelenen Phasen nur zu geringen Zeitabweichungen gekommen ist. Die entstandene Differenzen haben sich untereinander ausgeglichen, wodurch der veranschlagte Zeitrahmen von 70h genau eingehalten werden konnte.
+Rückwirkend betrachtet, kann festgehalten werden, dass alle Anforderungen an den Editor gemäß der Projektplanung umgesetzt wurden. Der im Abschnitt \ref{Projektphasen} erwähnte Projektplan konnte eingehalten werden. Die Tabelle in \autoref{fig:sollist} zeigt die tatsächlich benötigten Zeit gegenüber der geplanten. Dabei ist zu erkennen, dass es in den einzelenen Phasen nur zu geringen Zeitabweichungen gekommen ist. Die entstandene Differenzen haben sich untereinander ausgeglichen, wodurch der veranschlagte Zeitrahmen von 70h genau eingehalten werden konnte.
 
 \vfill
 
